# SIRAD.CDR

./: README.md  nohup.out  package-lock.json  package.json  pyproject.toml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: cargar-datos-modal.tsx  experticia-form.tsx  (+4 more)
logs/: audit.jsonl  security.jsonl
osintpython/: consultas_cedulas.json  infoI.py
server/: index(original).ts  index.ts  index1.ts  logJobs.ts  logWriter.ts  logger.ts  routes-logs.ts  routes.ts  routesAnalisi.ts  routes_gest.ts  storage.ts
server/model_ai/: api_restful.py  gemini.ts
server/monitor/: logJobs.ts  logWriter.ts  logger.ts  routes-logs.ts
shared/: schema.ts
uploads/: Dictamen Pericial Determinar contactos frecuentes(Plantilla).docx  PLANILLA DATOS.xlsx  plantilla-determinar_contacto_frecuente-1783788902151.docx  plantilla-determinar_contacto_frecuente-1784563345971.docx
uploads/experticias/: experticia-1782936022867-712570082-4245013368_SAR_SCXM_REPORTE_VOZ_C67151R160153.xlsx  experticia-1784426782507-761098023-4245281817_SAR_SCXM_REPORTE_VOZ_C31739R77555.xlsx  experticia-1784427854681-48242683-GSM_584122150975_20251014005706_1.xlsx  experticia-1784427854906-10683512-GSM_584125256153_20251014005609_1.xlsx  experticia-1784468646519-859146217-4245425964_SAR_SCXM_REPORTE_VOZ_C31737R77550.xlsx  experticia-1784468650412-909751081-4145454844_SAR_SCXM_REPORTE_VOZ_C31737R77549.xlsx  experticia-1784468653181-201109052-4140856210_SAR_SCXM_REPORTE_VOZ_C31737R77548.xlsx  experticia-1784470849618-599575739-4245687350_SAR_SCXM_REPORTE_VOZ_C34737R85016.xlsx  (+8 more)
(+7 files in other folders)
